k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  selector:
    app: nodeapp 
  ports:
    - port: 8080  
  type: ClusterIP
